# patcher-resolver

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml
resolver/: activities.py  cli.py  config.py  resolve.py  worker.py  workflows.py
sweep/: sweep.sh
sweep/candidates/: all.txt  arch.txt  os.txt
sweep/shim/: curl  sw_vers
