[project]
name = "patcher-resolver"
version = "0.1.0"
description = "Self-hosted macOS Installomator label resolver for Patcher (Temporal)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "temporalio>=1.29.0",
    "httpx>=0.27",
    "pydantic-settings>=2.14.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["resolver"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "E101",
  "F401",
  "F403",
  "I001",
  "N801",
  "N802",
  "N806"
]
ignore = ["E722"]
